# task-2

./: .gitignore  Makefile  README.md  crud.py  functions.py  main.py  menu.py  money.py  pyproject.toml  quantity.py  settings.py  setup.cfg
.github/workflows/: cov.yml  lint-test.yml  lint.yml
data/: menu.json  quantity.json
files/: menu.json  money.json  quantity.json
icecream_api/: app.py  crud.py  main.py  settings.py
