[tool.poetry]
name = "icecream-task"
version = "0.1.0"
description = ""
authors = ["Kuznetsov Ilya <KuznetsOFF.ilya@yandex.ru>"]
readme = "README.md"
packages = [{include = "icecream_task"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
