[tool.poetry]
name = "icecream-api"
version = "0.1.0"
description = ""
authors = ["Ilya Kuznetsov <ilkztsff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
pydantic = "^2.7.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
